# tribev2-brain-timeline

./: .gitignore  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  app.py  profiler.py  pyproject.toml  requirements.txt  theme.py  ui.py
docs/: FUTURE-IMPROVEMENTS.md  PLAN.md
docs/guides/: instagram-curve-contrast.md
docs/superpowers/plans/: 2026-06-24-local-mps-quality-video.md
docs/superpowers/specs/: 2026-06-23-local-mps-quality-video-design.md  2026-06-24-button-lock-and-save-curves.md  2026-06-24-chunk-processor-fix.md  2026-06-24-dedup-cache-design.md  2026-06-24-playhead-follow-design.md  2026-06-24-progress-bar-design.md
src/tribescore/: __init__.py  fast_encode.py  inference.py  memguard.py  metrics.py  mps.py  patches.py  plotting.py  prewarm.py  progress.py  windowing.py
tests/: conftest.py  test_blocked_attention.py  test_layer_hooks.py  test_memguard.py  test_metrics.py  test_no_speech_notice.py  test_progress.py  test_windowing.py
